# moshi_proj

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  annotate.py  pyproject.toml  setup.cfg  train.py
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/moshi_build/: action.yml
example/: fork_attn_check.yaml  moshi_7B.yaml  moshika_rag_voice.yaml  moshika_rag_voice_smoke.yaml  moshika_voice_mlp_only.yaml
finetune/: args.py  checkpointing.py  eval.py  loss.py  mixed_precision.py  utils.py  wrapped_model.py
finetune/data/: args.py  data_loader.py  dataset.py  interleaver.py
finetune/data/prepared/: all.jsonl  eval.jsonl  train.jsonl
finetune/monitoring/: metrics_logger.py
scripts/: build_manifest.py  compare_attention.py  prepare_stereo.py  strip_config.py
tutorials/: moshi_finetune.ipynb
